2003-11-07  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-dispspec-gxx.h, Makefile.am, cong-dispspec.c, gxx-object-from-xml-tree.h, gxx-object-to-xml-tree.h

	Ported dispspec serialisation format over to gxx

	* cong-dispspec-element-gxx.h, cong-dispspec-element.c

	Handle element @type using gxx rather than hand-coded C
	
	* gxx-object-from-xml-tree.h, gxx-object-to-xml-tree.h, gxx-undefine-shared-macros.h, cong-dispspec-element-gxx.h, Makefile.am, cong-dispspec-element.c

	Macro-based boilerplate generation of XML load/save routines
	
	* cong-editor-node-text.c

	Fixed a warning

	* cong-dispspec-element.c, cong-dispspec-element.h, Makefile.am, cong-dispspec.c, cong-dispspec.h, cong-document.h, cong-editor-area-span-tag.c, cong-editor-area-structural-tag.c, cong-editor-node-element-span.c, cong-editor-node-element-structural.c, cong-editor-node.c, cong-node-properties-dialog.c, cong-node.c, cong-overview-view.c, global.h, plugin-admonition-node-element.c, popup.c, tree.c, xmldata.c

	Cut relevants parts of cong-dispspec.[hc] into new files cong-dispspec-element[.hc]

	* cong-dispspec.c, cong-dispspec.h, plugin-admonition-node-element.c

	Dispspec elements now support arbitrary key-value pairs; DocBook admonition plugin now uses this to determine icon filenames

2003-11-05  Paul Smith  <conglomerate@pcs.uklinux.net>

	* cong-vfs.c

	Fixed unref of NULL uri (bug #126231)

	* xmledit.c

	Improvements to cut/copy insensitivity warning

2003-11-05  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-node-comment.c, cong-editor-node-text.c, cong-editor-widget.h, cong-editor-widget3.c, cong-text-cache.c, cong-text-cache.h, cong-util.c

	Text normalisation now supports Pango attributes; rewrite of the usage of PangoLayout handling in the editor widget to use this (in preparation for proper support of preedit states for GTK Input Modules)

2003-11-04  Paul Smith  <conglomerate@pcs.uklinux.net>

	* cong-node.c, cong-node.h, cong-range.c, popup.c
